cfn_benchmark/cfn_templates/aws-samples__opensearch-glue-integration-patterns/cloudformation/opensearch-glue-infrastructure.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  This CloudFormation template deploys AWS resources related to the blog post
  - Batch Data Ingestion into Amazon OpenSearch using AWS Glue

Parameters:
  ResourceIdentifier:
    Type: String
    Description: "Unique identifier to tag all resources created by this CloudFormation stack"
    Default: "GlueOpenSearchStack"

  ESMasterUserPassword:
    Description: "ElasticSearch Password"
    Type: String
    NoEcho: True
    MinLength: 8
    MaxLength: 128
    AllowedPattern: ^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_+\-=\[\]{}|'])[A-Za-z\d!@#$%^&*()_+\-=\[\]{}|']{8,128}$
    ConstraintDescription: >
      Password must be 8-128 characters and contain at least 3 of the following:
      lowercase letters, uppercase letters, numbers, and special characters (!@#$%^&*()_+-=[]{}|').
      It must not contain forward slash (/), double quote ("), or space.

  OSMasterUserPassword:
    Description: "OpenSearch Password"
    Type: String
    NoEcho: True
    MinLength: 8
    MaxLength: 128
    AllowedPattern: ^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_+\-=\[\]{}|'])[A-Za-z\d!@#$%^&*()_+\-=\[\]{}|']{8,128}$
    ConstraintDescription: >
      Password must be 8-128 characters and contain at least 3 of the following:
      lowercase letters, uppercase letters, numbers, and special characters (!@#$%^&*()_+-=[]{}|').
      It must not contain forward slash (/), double quote ("), or space.

Resources:
  # VPC and Networking resources
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub ${ResourceIdentifier}-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyIGW

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W33
            reason: "This subnet is intended to be public and requires auto-assignment of public IPs."
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ResourceIdentifier}-PublicSubnet

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourceIdentifier}-PrivateSubnet1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourceIdentifier}-PrivateSubnet2

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ResourceIdentifier}-PrivateRouteTable

  DefaultPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  # Glue VPC Endpoints
  GlueVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.glue"
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      SecurityGroupIds:
        - !Ref GlueSecurityGroup
      PrivateDnsEnabled: true

  # S3 VPC Endpoint
  S3VPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
      VpcId: !Ref VPC
      RouteTableIds:
        - !Ref PrivateRouteTable
      VpcEndpointType: Gateway

  # Glue Security Group
  # We're using separate AWS::EC2::SecurityGroupIngress resources to avoid circular
  # dependencies between security groups.
  # Disabling W3687: FromPort and ToPort are ignored when IpProtocol is '-1', but we keep them for clarity
  GlueSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - W3687
      cfn_nag:
        rules_to_suppress:
          - id: W5
            reason: "Open egress is required for Glue to communicate with various AWS services and external endpoints."
          - id: W40
            reason: "All outbound traffic is intentionally allowed for this security group to ensure Glue can access necessary resources."
          - id: W42
            reason: "All protocols are intentionally allowed for ingress to support various Glue operations."
    Properties:
      GroupDescription: Security group for Glue to access OpenSearch
      VpcId: !Ref VPC
      SecurityGroupEgress:
      - IpProtocol: '-1'
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0
        Description: Allow all outbound traffic

  # OpenSearch Security Group
  # Disabling W3687: FromPort and ToPort are ignored when IpProtocol is '-1', but we keep them for clarity
  SearchDomainSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - W3687
      cfn_nag:
        rules_to_suppress:
          - id: W5
            reason: "Open egress is required for Glue to communicate with various AWS services and external endpoints."
          - id: W40
            reason: "All outbound traffic is intentionally allowed for this security group to ensure Glue can access necessary resources."
          - id: W42
            reason: "All protocols are intentionally allowed for ingress to support various Glue operations."
    Properties:
      GroupDescription: Security group for OpenSearch and Elasticsearch domains
      VpcId: !Ref VPC
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic

  # Ingress rule for OpenSearch Security Group
  SearchDomainSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Port 443 Security Group Rule
      GroupId: !Ref SearchDomainSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref GlueSecurityGroup

  # Ingress rule for Glue Security Group
  GlueSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Port 443 Security Group Rule
      GroupId: !Ref GlueSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref SearchDomainSecurityGroup

  # Ingress rule for Glue Security Group to allow all traffic from itself
  # Exception: At least one security group must open all ingress ports.
  # To limit traffic, the source security group in your inbound rule can be restricted to the same security group
  GlueSecurityGroupSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Self Ingress Security Group Rule
      GroupId: !Ref GlueSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref GlueSecurityGroup

  # KMS Key
  StackKMSKey:
    Type: AWS::KMS::Key
    Properties:
      Description: "KMS key for OpenSearch Service and related resources"
      EnableKeyRotation: true
      KeyPolicy:
        Version: "2012-10-17"
        Id: "OpenSearchSecretsAndLogsEncryptionPolicy"
        Statement:
        - Sid: "Enable IAM User Permissions"
          Effect: "Allow"
          Principal:
            AWS: !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:root"
          Action: "kms:*"
          Resource: "*"
        - Sid: "AllowCloudFormationAccess"
          Effect: "Allow"
          Principal:
            Service: "cloudformation.amazonaws.com"
          Action: "kms:*"
          Resource: "*"
        - Sid: "Allow CloudWatch Logs Use of the Key"
          Effect: "Allow"
          Principal:
            Service: "logs.amazonaws.com"
          Action: "kms:*"
          Resource: "*"
        - Sid: "Allow Glue Use of the Key"
          Effect: "Allow"
          Principal:
            Service: "glue.amazonaws.com"
          Action: "kms:*"
          Resource: "*"
        - Sid: "Allow Secrets Manager Use of the Key"
          Effect: "Allow"
          Principal:
            Service: !Sub "secretsmanager.${AWS::Region}.amazonaws.com"
          Action: "kms:*"
          Resource: "*"
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  # SSM Paranmeter and SecretsManager::Secret
  OpenSearchParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: blog-post-opensearch-password
      Type: String
      Value: !Ref OSMasterUserPassword
      Description: "SSM Parameter for OpenSearch Domain Password"

  ElasticSearchParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: blog-post-elasticsearch-password
      Type: String
      Value: !Ref ESMasterUserPassword
      Description: "SSM Parameter for ElasticSearch Domain Password"

  OpenSearchSecret:
    Type: 'AWS::SecretsManager::Secret'
    Properties:
      Name: blog-post-opensearch-secret
      Description: This secret has OpenSearch domain's userid and password to create connection in AWS Glue
      SecretString: !Sub
        - '{"opensearch.net.http.auth.user":"osuser","opensearch.net.http.auth.pass":"${Password}"}' # AWS Glue recently made change to the keys. It is USERNAME and PASSWORD.
        - Password: !Ref OSMasterUserPassword
      KmsKeyId: !GetAtt StackKMSKey.Arn
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  # VPC Flow Log
  VPCFlowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt FlowLogRole.Arn
      LogGroupName: !Ref VPCFlowLogGroup
      ResourceId: !Ref VPC
      ResourceType: VPC
      TrafficType: ALL

  # Logging Resources
  VPCFlowLogGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      LogGroupName: !Sub "/aws/vpc/flowlogs/${ResourceIdentifier}/vpc-flow-logs"
      RetentionInDays: 3
      KmsKeyId: !GetAtt StackKMSKey.Arn
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  ESApplicationLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/aws/opensearchservice/domains/${ResourceIdentifier}/es-application-logs"
      RetentionInDays: 3
      KmsKeyId: !GetAtt StackKMSKey.Arn
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  ESSlowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/aws/opensearchservice/domains/${ResourceIdentifier}/es-slow-logs"
      RetentionInDays: 3
      KmsKeyId: !GetAtt StackKMSKey.Arn
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  ESIndexSlowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/aws/opensearchservice/domains/${ResourceIdentifier}/es-index-slow-logs"
      RetentionInDays: 3
      KmsKeyId: !GetAtt StackKMSKey.Arn
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  OSApplicationLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/aws/opensearchservice/domains/${ResourceIdentifier}/os-application-logs"
      RetentionInDays: 3
      KmsKeyId: !GetAtt StackKMSKey.Arn
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  OSSlowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/aws/opensearchservice/domains/${ResourceIdentifier}/os-slow-logs"
      RetentionInDays: 3
      KmsKeyId: !GetAtt StackKMSKey.Arn
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  OSIndexSlowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub "/aws/opensearchservice/domains/${ResourceIdentifier}/os-index-slow-logs"
      RetentionInDays: 3
      KmsKeyId: !GetAtt StackKMSKey.Arn
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  LogGroupResourcePolicy:
    Type: AWS::Logs::ResourcePolicy
    Properties:
      PolicyName: !Sub "${ResourceIdentifier}-ES-LogGroup-Policy"
      PolicyDocument: !Sub |
        {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": "es.amazonaws.com"
              },
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Resource": [
                "${ESApplicationLogGroup.Arn}",
                "${ESSlowLogGroup.Arn}",
                "${ESIndexSlowLogGroup.Arn}",
                "${OSApplicationLogGroup.Arn}",
                "${OSSlowLogGroup.Arn}",
                "${OSIndexSlowLogGroup.Arn}"
              ]
            }
          ]
        }

  # Elasticsearch Domain
  ElasticsearchDomain:
    Type: AWS::Elasticsearch::Domain
    Metadata:
      cfn_nag:
        rules_to_suppress:
        - id: "W28"
          reason: "This code is designed to support the accompanying blog post. Using explicit resource names improves clarity, making it easier to follow along with the blog content."
        - id: "W90"
          reason: "This code is designed to support the accompanying blog post. Assigning a VPC would limit the user's ability to access OS dashboard. Production use cases should enable VPCOptions"
    Properties:
      DomainName: "es-spark"
      ElasticsearchVersion: '7.10'
      ElasticsearchClusterConfig:
        DedicatedMasterEnabled: true
        InstanceCount: '2'
        ZoneAwarenessEnabled: true
        InstanceType: 'r5.large.elasticsearch'
        DedicatedMasterType: 'm5.large.elasticsearch'
        DedicatedMasterCount: '3'
      EBSOptions:
        EBSEnabled: true
        VolumeSize: '20'
        VolumeType: 'gp2'
      VPCOptions:
        SubnetIds:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
        SecurityGroupIds:
          - !Ref SearchDomainSecurityGroup
      AccessPolicies:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Principal:
              AWS: '*'
            Action: 'es:*'
            Resource: !Sub "arn:${AWS::Partition}:es:${AWS::Region}:${AWS::AccountId}:domain/es-spark/*"
      AdvancedOptions:
        rest.action.multi.allow_explicit_index: 'true'
      NodeToNodeEncryptionOptions:
        Enabled: true
      EncryptionAtRestOptions:
        Enabled: true
        KmsKeyId: !Ref StackKMSKey
      DomainEndpointOptions:
        EnforceHTTPS: true
      AdvancedSecurityOptions:
        Enabled: true
        InternalUserDatabaseEnabled: true
        MasterUserOptions:
          MasterUserName: esuser
          MasterUserPassword: !Ref ESMasterUserPassword
      LogPublishingOptions:
        SEARCH_SLOW_LOGS:
          CloudWatchLogsLogGroupArn: !GetAtt ESSlowLogGroup.Arn
          Enabled: true
        INDEX_SLOW_LOGS:
          CloudWatchLogsLogGroupArn: !GetAtt ESIndexSlowLogGroup.Arn
          Enabled: true
        ES_APPLICATION_LOGS:
          CloudWatchLogsLogGroupArn: !GetAtt ESApplicationLogGroup.Arn
          Enabled: true
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

# OpenSearch Domain with Fine-Grained Access Control
  OpenSearchServiceDomain:
    Type: AWS::OpenSearchService::Domain
    Metadata:
      cfn_nag:
        rules_to_suppress:
        - id: "W28"
          reason: "This code is designed to support the accompanying blog post. Using explicit resource names improves clarity, making it easier to follow along with the blog content."
        - id: "W90"
          reason: "This code is designed to support the accompanying blog post. Assigning a VPC would limit the user's ability to access OS dashboard. Production use cases should enable VPCOptions"
    Properties:
      DomainName: "os-spark"
      EngineVersion: 'OpenSearch_2.17'
      ClusterConfig:
        DedicatedMasterEnabled: true
        InstanceCount: '2'
        ZoneAwarenessEnabled: true
        InstanceType: 'm6g.large.search'
        DedicatedMasterType: 'm6g.large.search'
        DedicatedMasterCount: '3'
      EBSOptions:
        EBSEnabled: true
        VolumeSize: '20'
        VolumeType: 'gp2'
      VPCOptions:
        SubnetIds:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
        SecurityGroupIds:
          - !Ref SearchDomainSecurityGroup
      AccessPolicies:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Principal:
              AWS: '*'
            Action: 'es:*'
            Resource: !Sub "arn:${AWS::Partition}:es:${AWS::Region}:${AWS::AccountId}:domain/os-spark/*"
      AdvancedOptions:
        rest.action.multi.allow_explicit_index: 'true'
        override_main_response_version: 'true'
      NodeToNodeEncryptionOptions:
        Enabled: true
      EncryptionAtRestOptions:
        Enabled: true
        KmsKeyId: !Ref StackKMSKey
      DomainEndpointOptions:
        EnforceHTTPS: true
      AdvancedSecurityOptions:
        Enabled: true
        InternalUserDatabaseEnabled: true
        MasterUserOptions:
          MasterUserName: osuser
          MasterUserPassword: !Ref OSMasterUserPassword
      LogPublishingOptions:
        SEARCH_SLOW_LOGS:
          CloudWatchLogsLogGroupArn: !GetAtt OSSlowLogGroup.Arn
          Enabled: true
        INDEX_SLOW_LOGS:
          CloudWatchLogsLogGroupArn: !GetAtt OSIndexSlowLogGroup.Arn
          Enabled: true
        AUDIT_LOGS:
          CloudWatchLogsLogGroupArn: !GetAtt OSApplicationLogGroup.Arn
          Enabled: true
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete

  # S3 Bucket for assets
  assetsbucket:
    Type: AWS::S3::Bucket
    # S3 bucket will be deleted when stack is stack is deleted
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Metadata:
      cfn_nag:
        rules_to_suppress:
        - id: "W35"
          reason: "Public access is fully restricted for this bucket; W35 warning can be safely suppressed. It also creates cyclic and infinite dependency."
    Properties:
      # checkov:skip=CKV_AWS_18:See comment in Metadata section
      BucketName: !Sub "blog-post-assets-bucket-${AWS::AccountId}-${AWS::Region}"
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      VersioningConfiguration:
        Status: Enabled

  AssetsBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref assetsbucket
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              AWS: !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:root"
            Action:
              - "s3:GetObject"
              - "s3:PutObject"
              - "s3:DeleteObject"
              - "s3:ListBucket"
            Resource:
              - !Sub "${assetsbucket.Arn}"
              - !Sub "${assetsbucket.Arn}/*"

  # IAM Role for VPC Flow Logs
  FlowLogRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "vpc-flow-logs.amazonaws.com"
            Action: "sts:AssumeRole"
      Policies:
        - PolicyName: "VPCFlowLogsPolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource:
                  - !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/vpc/flowlogs/${ResourceIdentifier}/vpc-flow-logs:*"

  # Glue Connection for Interactive Sessions
  GlueInteractiveSessionConnection:
    Type: AWS::Glue::Connection
    Properties:
      CatalogId: !Ref AWS::AccountId
      ConnectionInput:
        ConnectionType: NETWORK
        ConnectionProperties: {}
        PhysicalConnectionRequirements:
          AvailabilityZone: !GetAtt PrivateSubnet1.AvailabilityZone
          SecurityGroupIdList:
            - !Ref GlueSecurityGroup
          SubnetId: !Ref PrivateSubnet1

  # Glue Connection for OpenSearch Service
  GlueOpenSearchServiceConnection:
    Type: AWS::Glue::Connection
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E3030
    Properties:
      CatalogId: !Ref AWS::AccountId
      ConnectionInput:
        ConnectionType: OPENSEARCH
        ConnectionProperties:
          SparkProperties: !Sub >
            {
              "secretId": "blog-post-opensearch-secret",
              "opensearch.nodes": "https://${OpenSearchServiceDomain.DomainEndpoint}",
              "opensearch.port": "443",
              "opensearch.nodes.wan.only": "true",
              "opensearch.aws.sigv4.enabled": "false",
              "opensearch.aws.sigv4.region": "${AWS::Region}"
            }
        # Name: GlueOpenSearchServiceConnection
        PhysicalConnectionRequirements:
          AvailabilityZone: !GetAtt PrivateSubnet1.AvailabilityZone
          SecurityGroupIdList:
            - !Ref GlueSecurityGroup
            - !Ref SearchDomainSecurityGroup
          SubnetId: !Ref PrivateSubnet1

  # IAM Role for AWS Glue
  GlueRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "glue.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
      ManagedPolicyArns:
        - !Sub "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSGlueServiceRole"
        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonSSMReadOnlyAccess"
      Policies:
        - PolicyName: "S3BucketAccessPolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "s3:GetObject"
                  - "s3:PutObject"
                Resource:
                  - !Sub "${assetsbucket.Arn}/jars/*.jar"
                  - !Sub "${assetsbucket.Arn}/datasets/*.parquet"
        - PolicyName: "IAMPassRoleAccessPolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "iam:PassRole"
                  - "iam:GetRole"
                Resource: !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*GlueRole*"
        - PolicyName: "KMSAccessPolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "kms:GenerateDataKey"
                  - "kms:Decrypt"
                Resource: !GetAtt StackKMSKey.Arn
        - PolicyName: "OpenSearchAccessPolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "es:ESHttp*"
                Resource:
                  - !Sub "arn:${AWS::Partition}:es:${AWS::Region}:${AWS::AccountId}:domain/es-spark/*"
                  - !Sub "arn:${AWS::Partition}:es:${AWS::Region}:${AWS::AccountId}:domain/os-spark/*"
        - PolicyName: "EC2VPCAccess"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "ec2:CreateNetworkInterface"
                  - "ec2:DescribeNetworkInterfaces"
                  - "ec2:DeleteNetworkInterface"
                  - "ec2:DescribeVpcAttribute"
                  - "ec2:DescribeSecurityGroups"
                  - "ec2:DescribeSubnets"
                  - "ec2:DescribeVpcs"
                Resource: "*"
        - PolicyName: "GlueCodeWhispererAccess"
          PolicyDocument:
              Version: "2012-10-17"
              Statement:
                - Action:
                    - "codewhisperer:GenerateRecommendations"
                    - "codewhisperer:CreateCodeScan"
                    - "codewhisperer:GetCodeScan"
                    - "codewhisperer:ListCodeScanFindings"
                  Effect: Allow
                  Resource: "*"
                  Condition:
                    StringEquals:
                      "aws:ServiceName": "glue"
        - PolicyName: "SecretsManagerAccess"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "secretsmanager:GetSecretValue"
                Resource:
                  - !Sub "arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:blog-post-opensearch-secret-*"

Outputs:
  OpenSearchDomainEndpoint:
    Description: "Domain endpoint for the Amazon OpenSearch Service domain for the blog post"
    Value: !GetAtt OpenSearchServiceDomain.DomainEndpoint
    Export:
      Name: !Sub "${AWS::StackName}-OpenSearchDomainEndpoint"

  ElasticsearchDomainEndpoint:
    Description: "Domain endpoint for the Amazon Elasticsearch domain for the blog post"
    Value: !GetAtt ElasticsearchDomain.DomainEndpoint
    Export:
      Name: !Sub "${AWS::StackName}-ESDomainEndpoint"

  S3Bucket:
    Description: "Name of Amazon S3 Bucket for the blog post"
    Value: !Ref assetsbucket

  VPCId:
    Description: "ID of the VPC created for the Elasticsearch and OpenSearch domains"
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}-VPCId"

  PublicSubnetId:
    Description: Public Subnet ID
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnetID

  PrivateSubnet1Id:
    Description: "ID of the first private subnet"
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet1Id"

  PrivateSubnet2Id:
    Description: "ID of the second private subnet"
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet2Id"

  GlueRoleArn:
    Description: "ARN of the IAM role created for AWS Glue"
    Value: !GetAtt GlueRole.Arn
    Export:
      Name: !Sub "${AWS::StackName}-GlueRoleArn"

  GlueInteractiveSessionConnectionName:
    Description: "Name of the Glue Connection for Interactive Sessions"
    Value: !Ref GlueInteractiveSessionConnection

  GlueOpenSearchServiceConnectionName:
    Description: "Name of the Glue Connection for OpenSearch Service"
    Value: !Ref GlueOpenSearchServiceConnection
    Export:
      Name: !Sub "${AWS::StackName}-GlueOpenSearchServiceConnectionName"

  GlueSecurityGroupId:
    Description: "ID of the Glue Security Group"
    Value: !Ref GlueSecurityGroup

  SearchDomainSecurityGroupId:
    Description: "ID of the OpenSearch Security Group"
    Value: !Ref SearchDomainSecurityGroup
